Fixing more broken css

--- a/app/assets/stylesheets/documentation.css.css
+++ b/app/assets/stylesheets/documentation.css.css
@@ -26,7 +26,6 @@ p
 	padding-top: 	30px;
 	overflow: 		auto;
 	width: auto;
-	height: ;
 }
 
 .code a
